--- a/templates/index.html
+++ b/templates/index.html
@@ -18,7 +18,7 @@
     <![endif]-->
   </head>
   <body>
-	<nav class="navbar navbar-default">
+	<nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -59,6 +59,7 @@
       <form class="navbar-form navbar-right" method="POST" action="/login/">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Email" name = "email">
+
           <div class="form-group">
           <input type="password" class="form-control" placeholder="Пароль" name = "passwd">
         </div>
@@ -71,7 +72,12 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-    <h1>Привет от нашей газетки!</h1>
+<div class="container">
+  <div class="page-header">
+    <h1 padding: 30px >  Привет от нашей газетки! <small>Всегда рады видеть вас на нашем сайте</small></h1>
+  </div>
+</div>\ 
+   
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
