--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>ИМ Газетка</title>
+    <title>{% block title %}ИМ Газетка{% endblock %}</title>
 
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
@@ -26,9 +26,11 @@
   </div>
 </div>
 
+{% block content %}
 <div class="container">
 	{% include "slider.html" ignore missing %}
 </div>
+{% endblock %}
 
 
 <div class="container">
