--- a/templates/index.html
+++ b/templates/index.html
@@ -20,11 +20,13 @@
   </head>
   <body>
 {% include "navigation.html" %}
+{% block inf_gl_s %}
 <div class="container">
   <div class="page-header">
     <h1> Интерент-магазин Газетка! <small>Всегда рады видеть вас на нашем сайте</small></h1>
   </div>
 </div>
+{% endblock %}
 
 {% block content %}
 <div class="container">
@@ -35,7 +37,7 @@
 
 <div class="container">
  <div class="footer">
-        <p>&copy; lyaDjurin 2017</p>
+        <p> &copy; 2017 Company, IlyaDjurin.</p>
       </div>
       </div>
  
