--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
 
       </button>
-      <a class="navbar-brand" href="#">Газетка</a>
+      <a class="navbar-brand" href="http://127.0.0.1:5000">Газетка</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
