--- a/templates/slider.html
+++ b/templates/slider.html
@@ -7,9 +7,14 @@
   </ol>
 
   <!-- Wrapper for slides -->
+  <div class="row">
+        <div class="col-md-12">
+        
+
   <div class="carousel-inner" role="listbox">
+  
     <div class="item active">
-      <img src="/static/img/1.png" alt="Акция 1">
+      <img src="/static/img/11.jpg" alt="Акция 1">
       <div class="carousel-caption">
         Акция 1
       </div>
@@ -17,18 +22,20 @@
 
     
     <div class="item">
-      <img src="/static/img/2.png" alt="Акция 2">
+      <img src="/static/img/12.jpg" alt="Акция 2">
       <div class="carousel-caption">
         Акция 2
       </div>
     </div>
 
     <div class="item ">
-      <img src="/static/img/3.png" alt="Акция 3">
+      <img src="/static/img/13.jpg" alt="Акция 3">
       <div class="carousel-caption">
         Акция 3
       </div>
     </div>
+  </div>
+  </div>
   </div>
 
   <!-- Controls -->
