--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
 </div>
 {% endblock %}
 
-
+<div class="page-header"></div>  
 <div class="container">
  <div class="footer">
         <p> &copy; 2017 Company, IlyaDjurin.</p>
