--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -20,7 +20,7 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Товары <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Смартфоны</a></li>
+            <li><a href="/smart/">Смартфоны</a></li>
             <li><a href="#">Бытовая техника</a></li>
             <li><a href="#">Автотовары</a></li>
             <li><a href="#">Просто кнопка</a></li>
