--- a/templates/smartfons.html
+++ b/templates/smartfons.html
@@ -1,4 +1,4 @@
-{% extends "index.html" %}
+ {% extends "index.html" %}
 
 {% import "login_menu.html" as container %}
 
@@ -13,7 +13,8 @@
         <h1>Смартфоны</h1>
       </div>
       <p>
-        <button type="button" class="btn btn-lg btn-info">Apple</button>
+        
+        <button {{username}} type="submit" class="btn btn-lg btn-info">Apple</button>
         <button type="button" class="btn btn-lg btn-info">Sumsung</button>
         <button type="button" class="btn btn-lg btn-info">Meizu</button>
         <button type="button" class="btn btn-lg btn-info">LG</button>
