--- a/templates/smartfons.html
+++ b/templates/smartfons.html
@@ -13,14 +13,26 @@
         <h1>Смартфоны</h1>
       </div>
       <p>
+        <form class="form-signin" role="form" method="POST" action="/smart/hone">
+        <button class="btn btn-lg btn-info" type="submit">Apple</button> </form>
+        <form class="form-signin" role="form" method="POST" action="/smart/sam">
+        <button  class="btn btn-lg btn-info" type="submit">Samsung</button> </form>
+        <form class="form-signin" role="form" method="POST" action="/smart/meiz">
+        <button  class="btn btn-lg btn-info" type="submit">Meizu</button>
+        <form class="form-signin" role="form" method="POST" action="/smart/lg">
+        <button  class="btn btn-lg btn-info" type="submit">LG</button>
+        <form class="form-signin" role="form" method="POST" action="/smart/iaom">
+        <button  class="btn btn-lg btn-info" type="submit">Xiaomi</button>
+        <form class="form-signin" role="form" method="POST" action="/smart/novo">
+        <button  class="btn btn-lg btn-info" type="submit">Lenovo</button>
+        <form class="form-signin" role="form" method="POST" action="/smart/lus">
+        <button  class="btn btn-lg btn-info" type="submit">OnePlus</button>
+        </form>
+        </form>
+        </form>
+        </form>
+        </form>
         
-        <button {{username}} type="submit" class="btn btn-lg btn-info">Apple</button>
-        <button type="button" class="btn btn-lg btn-info">Sumsung</button>
-        <button type="button" class="btn btn-lg btn-info">Meizu</button>
-        <button type="button" class="btn btn-lg btn-info">LG</button>
-        <button type="button" class="btn btn-lg btn-info">Xiaomi</button>
-        <button type="button" class="btn btn-lg btn-info">Lenovo</button>
-        <button type="button" class="btn btn-lg btn-info">OnuPlus</button>
       </p>
       <div class="page-header"></div>  
 </div>
