--- a/templates/login.html
+++ b/templates/login.html
@@ -1,6 +1,9 @@
 {% extends "index.html" %}
+{% block title %}Login{% endblock %}
+{% block inf_gl_s %}{% endblock %}
 {% block content %}
+<div class="container">
 <p>{{ email }}</p>
-
 <p>{{ password }}</p>
+</div>
 {% endblock %}
