--- a/templates/nav_sidebar.html
+++ b/templates/nav_sidebar.html
@@ -1,8 +1,12 @@
- <div class="container-fluid">
+ 
       <div class="row">
-        <div class="col-lg-6 sidebar">
+        <div class="col-lg-8 sidebar">
           <ul class="nav nav-sidebar">
-            <li class="active"><a href="#">Overview</a></li>
+      
+              <form role="form" method="POST" action="/smart/">
+              <label><input type="checkbox" name="vendor" value="cricket"> <a  class="btn" href="/smart/iaom" >Apple</a> </label>
+              </form>
+            <li class="active"><a href="#">{{u}}</a></li>
             <li><a href="#">Reports</a></li>
             <li><a href="#">Analytics</a></li>
             <li><a href="#">Export</a></li>
@@ -20,10 +24,17 @@
             <li><a href="">Another nav item</a></li>
           </ul>
         </div>
-      </div>
-    </div>    
+        <div class="btn-group-vertical" >
+        <label class="btn" href="/smart/iaom"  >
+          <input type="checkbox"  checked> Xiaomi
+        </label>
+        <label class="btn">
+            <input type="checkbox" autocomplete="off"> Checkbox 2
+        </label>
+        </div>
+        </div>
+    
 
 
 
-
-    {% include "nav_sidebar.html" %}
+    
