--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -1,3 +1,4 @@
+<div class="container">
 <nav class="navbar navbar-inverse" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -45,8 +46,9 @@
       </form>
      
         
-        </li>
-      </ul>
+    
+    
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
+</div>
