--- a/templates/nav_sidebar.html
+++ b/templates/nav_sidebar.html
@@ -6,7 +6,7 @@
               <form role="form" method="POST" action="/smart/">
               <label><input type="checkbox" name="vendor" value="cricket"> <a  class="btn" href="/smart/iaom" >Apple</a> </label>
               </form>
-            <li class="active"><a href="#">{{u}}</a></li>
+            <li class="active"><a href="#">{{s}}</a></li>
             <li><a href="#">Reports</a></li>
             <li><a href="#">Analytics</a></li>
             <li><a href="#">Export</a></li>
@@ -24,13 +24,16 @@
             <li><a href="">Another nav item</a></li>
           </ul>
         </div>
-        <div class="btn-group-vertical" >
-        <label class="btn" href="/smart/iaom"  >
-          <input type="checkbox"  checked> Xiaomi
+        <form class="form-vertical" method="GET" role="form" action="/smart/">
+        <div class="btn-group-vertical">
+        <label class="btn">
+          <input type="checkbox"  autocomplete="off" > Xiaomi
         </label>
         <label class="btn">
-            <input type="checkbox" autocomplete="off"> Checkbox 2
+            <input type="checkbox" class="form-control input-sm"  name="check1" > Checkbox 
         </label>
+        <button type="submit" class="btn">Sign in</button>
+        </form>
         </div>
         </div>
     
