--- a/templates/smartfons.html
+++ b/templates/smartfons.html
@@ -13,6 +13,7 @@
       </div>
       <p>
         <div class="form-signin">
+        <a  href="/smart/" class="btn btn-lg btn-info" type="submit">Все</a>
         <a  href="/smart/hone" class="btn btn-lg btn-info" type="submit">Apple</a>
         <a  href="/smart/sam" class="btn btn-lg btn-info" type="submit">Samsung</a>
         <a  href="/smart/meiz" class="btn btn-lg btn-info" type="submit">Meizu</a>
@@ -28,7 +29,7 @@
   <div class="col-lg-offset2 col-lg-4">
     <form method="GET" class="form-inline" role="form" action="/smart/">
     <div class="form-group">
-      <label class="sr-only">Название </label><input type="text" class="form-control" name="phone_name" /> 
+      <label class="sr-only">Название </label><input type="text" class="form-control" name="phone_name"/> 
     </div>
       <button type="submit" class="btn btn-success">Искать</button>
     </form>
