--- a/templates/navigation.html
+++ b/templates/navigation.html
@@ -19,14 +19,14 @@
         <li><a href="/inf/">Информация о сайте</a></li>
         <li><a href="#">Просто кнопка</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Товары <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-delay="1000" data-close-others="false">Товары <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/smart/">Смартфоны</a></li>
-            <li><a href="#">Бытовая техника</a></li>
-            <li><a href="#">Автотовары</a></li>
-            <li><a href="#">Просто кнопка</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Прочее</a></li>
+            <li><a  tabindex="-1" href="/smart/">Смартфоны</a></li>
+            <li><a  tabindex="-1" href="#">Бытовая техника</a></li>
+            <li><a  tabindex="-1" href="#">Автотовары</a></li>
+            <li><a  tabindex="-1" href="#">Просто кнопка</a></li>
+            <li  class="divider"></li>
+            <li><a  tabindex="-1" href="#">Прочее</a></li>
             
           </ul>
         </li>
