добавил 2 таблицы БД и окно характеристик товара

--- a/templates/smartfons.html
+++ b/templates/smartfons.html
@@ -57,7 +57,7 @@
 
             <h2>{{smartfon.tovar_name}}</h2>
             <p>{{smartfon.tovar_info}}</p>
-            <p><a class="btn btn-default" href="#" role="button">Детальнее &raquo;</a></p>
+            <p><a class="btn btn-default" href="/smart/harakter/" role="button">Детальнее &raquo;</a></p>
           </div>
           {% endfor %}
         </div><!-- /.col-lg-4 -->
