--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,15 @@
     <!-- Bootstrap -->
     <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <link href="/static/css/main.css" rel="stylesheet">
+    <link href="/static/css/jQuery.Brazzers-Carousel.min.css" rel="stylesheet"> 
+
+    <style>
+		
+		.item {
+			margin: 20px 0;
+		}
+		
+	</style>
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -52,5 +61,11 @@
     <script src="/static/js/bootstrap.min.js"></script>
     <script src="/static/js/jquery-3.1.1.min.js"></script>
     <script src="/static/js/bootstrap-hover-dropdown.min.js"></script>
+    <script src="/static/js/jQuery.Brazzers-Carousel.min.js"></script> 
+    <script>
+		$(document).ready(function() {
+			$(".item").brazzersCarousel();
+		});
+	</script>
   </body>
 </html>
