--- a/templates/info_gl_str.html
+++ b/templates/info_gl_str.html
@@ -4,7 +4,7 @@
 {% block content %}
 
     <div class="container">
-        <h1>Привет от нашей газетки!</h1>
+        <h2 class="arrow">Привет от нашей газетки!</h2>
     </div>
 
 {% endblock %}
