--- a/templates/slider.html
+++ b/templates/slider.html
@@ -14,7 +14,9 @@
   <div class="carousel-inner" role="listbox">
   
     <div class="item active">
+      <a href="#">
       <img src="/static/img/11.jpg" alt="Акция 1">
+      </a>
       <div class="carousel-caption">
         Акция 1
       </div>
@@ -22,14 +24,18 @@
 
     
     <div class="item">
+     <a href="#">
       <img src="/static/img/12.jpg" alt="Акция 2">
+      </a>
       <div class="carousel-caption">
         Акция 2
       </div>
     </div>
 
     <div class="item ">
+     <a href="#">
       <img src="/static/img/13.jpg" alt="Акция 3">
+     </a> 
       <div class="carousel-caption">
         Акция 3
       </div>
