--- a/templates/harakteriskick.html
+++ b/templates/harakteriskick.html
@@ -98,6 +98,47 @@
                   <td>Емкость АКБ</td>
                   <td>{{i.tovarinphoto_akb}} мА·ч</td>
                 </tr>
+                <tr>
+                  <td>Основная камера</td>
+                  <td>{{i.tovarinphoto_osnkamera}} Мп</td>
+                </tr>
+                <tr>
+                  <td>Операционная система</td>
+                  <td>{{i.tovarinphoto_opsystem}}</td>
+                </tr>
+                <tr>
+                  <td>Цвет</td>
+                  <td>Silver ({{i.tovarinphoto_color}})</td>
+                </tr>
+                <tr>
+                  <td>Количество ядер</td>
+                  <td>{{i.tovarinphoto_cpu}} ядра</td>
+                </tr>
+                <tr>
+                  <td>Разрешения дисплея</td>
+                  <td>{{i.tovarinphoto_razreshenie}}</td>
+                </tr>
+                <tr>
+                  <td>Фронтальная камера</td>
+                  <td>{{i.tovarinphoto_frontkamera}} Мп</td>
+                </tr>
+                <tr>
+                  <td>Сканер отпечатков</td>
+                  <td>{{i.tovarinphoto_scaner}}</td>
+                </tr>
+                <tr>
+                  <td>3g/EDGE</td>
+                  <td>{{i.tovarinphoto_3g}}</td>
+                </tr>
+                <tr>
+                  <td>GPS</td>
+                  <td>{{i.tovarinphoto_gps}}</td>
+                </tr>
+                <tr>
+                  <td>Тип матрицы</td>
+                  <td>{{i.tovarinphoto_matrix}}</td>
+                </tr>
+
                </tbody>
                </table>
                </div>
