--- a/templates/nav_sidebar.html
+++ b/templates/nav_sidebar.html
@@ -24,6 +24,9 @@
         <label class="checkbox">
             <input type="checkbox" name="check2" value="Samsung" autocomplete="off"> Samsung
         </label>
+         <label class="checkbox">
+            <input type="checkbox" name="check6" value="IPhone" autocomplete="off"> iPhone
+        </label>
         </div>
          </div>
          </div>
@@ -47,7 +50,7 @@
             <input type="checkbox" name="check4" value="5" autocomplete="off"> 5"
         </label>
         <label class="checkbox">
-            <input type="checkbox" name="check5" value="5,5" autocomplete="off"> 5,5"
+            <input type="checkbox" name="check5" value="5.5" autocomplete="off"> 5,5"
         </label>
         </div>
 
