--- a/templates/nav_sidebar.html
+++ b/templates/nav_sidebar.html
@@ -42,7 +42,7 @@
           <div id="collapseTwo" class="panel-collapse collapse">
           <div class="panel-body">
 
-              <div class="btn-group-vertical" >
+        <div class="btn-group-vertical" >
         <label class="checkbox">
           <input type="checkbox" name="check3" value="4" autocomplete="off"> 4"
         </label>
@@ -53,13 +53,35 @@
             <input type="checkbox" name="check5" value="5.5" autocomplete="off"> 5,5"
         </label>
         </div>
+        </div>
+        </div>
+        </div>
 
+        <div class="panel panel-default">
+          <div class="panel-heading">
+          <h4 class="panel-title">
+              <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree">
+                Оперативная память
+              </a>
+            </h4>
+          </div>
+          <div id="collapseThree" class="panel-collapse collapse">
+          <div class="panel-body">
 
-
-            </div>
-         </div>
-         </div>
-
+        <div class="btn-group-vertical" >
+        <label class="checkbox">
+          <input type="checkbox" name="check7" value="1" autocomplete="off"> 1 Гб
+        </label>
+        <label class="checkbox">
+            <input type="checkbox" name="check8" value="2" autocomplete="off"> 2 Гб
+        </label>
+        <label class="checkbox">
+            <input type="checkbox" name="check9" value="3" autocomplete="off"> 3 Гб
+        </label>
+        </div>
+        </div>
+        </div>
+        </div>
 
         <div class="btn-group" data-toggle="buttons">
           <label class="btn btn-primary btn-info">
